# bloat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: App.h  BaseRenderer.h  Shader.h  SimpleTriangleRenderer.h  WindowManager.h
include/core/: BaseRenderer.h
include/renderer/: ImageRendererNV.h  SimpleTriangleRenderer.h
include/util/: Vertex.h
resources/shader/: simple.frag  simple.vert
src/: App.cpp  BaseRenderer.cpp  Shader.cpp  SimpleTriangleRenderer.cpp  WindowManager.cpp  main.cpp
src/core/: BaseRenderer.cpp  WindowManager.cpp
src/renderer/: ImageRendererNV.cpp  SimpleTriangleRenderer.cpp
src/util/: Shader.cpp
